Fix view / css on iOS device

--- a/mulequiz/src/main/resources/web/s/main.css
+++ b/mulequiz/src/main/resources/web/s/main.css
@@ -20,6 +20,8 @@
 
   html, body, #app{
     height: 100%;
+    width: 100%;
+    position: fixed;
   }
 
   #intro {
